metadata/force-app/main/default/objects/CustomName_vOTof__c/CustomName_vOTof__c.object-meta.xml
<CustomObject>
    <description>Description_pUoKq</description>
    <label>CustomLabel_poivq</label>
    <nameField>
        <label>CustomLabel_poivq</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>CustomLabel_poivqs</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>