metadata/force-app/main/default/objects/CustomName_vOTof__c/fields/CustomField_GrIAZ__c.field-meta.xml
<CustomField>
    <fullName>CustomField_GrIAZ__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldWlekl</label>
    <length>255</length>
    <type>Text</type>
</CustomField>