metadata/force-app/main/default/objects/CustomName_vOTof__c/fields/CustomField_yffwj__c.field-meta.xml
<CustomField>
    <fullName>CustomField_yffwj__c</fullName>
    <description>Testing Creation of Custom object</description>
    <inlineHelpText>testhelp</inlineHelpText>
    <label>CusFieldgCZQw</label>
    <length>255</length>
    <type>Text</type>
</CustomField>